--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -105,7 +105,8 @@ body {
     background-color: #27344066;
     position: absolute;
     width: 100%;
-    height: 100dvh;
+    min-height: 100dvh;
+    height: 100%;
     left: 0;
 }
 
@@ -171,8 +172,35 @@ h1 {
     font-size: 3rem;
 }
 
-@media only screen and (max-width: 500px) {
-    body {
-        padding: 80px 10px;
+@media only screen and (max-width: 1040px) {
+    #headline-wrapper {
+        flex-direction: column;
+        gap: 20px;
+        align-items: start;
+    }
+
+    #delete-container {
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width: 540px) {
+    #delete-container {
+        width: 90%;
+    }
+
+    #delete-wrapper a,
+    #delete-wrapper span {
+        display: block;
+    }
+
+    #delete-wrapper span {
+        margin-bottom: 10px;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    h1 {
+        font-size: 2.7rem;
     }
 }
