--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -131,17 +131,31 @@ textarea {
 @media only screen and (max-width: 840px) {
     textarea {
         width: 100%;
+        font-size: 1.2rem;
+    }
+
+    #headline-text {
+        font-size: 1.2rem;
+        width: 100%;
+    }
+
+    #delete-container {
+        width: 70%;
     }
 }
 
 @media only screen and (max-width: 500px) {
-    #headline-text {
-        width: 100%;
-    }
-
     #post-section,
     #headline-section {
         padding: 60px 10px;
+    }
+
+    #delete-container {
+        width: 95%;
+    }
+
+    #delete-wrapper h2 {
+        text-align: center;
     }
 
     h1 {
